@@ -33,6 +33,7 @@ This release includes the following bugfixes:
  o re-used handle transfers with SFTP
  o curl_easy_escape() problem with byte values >= 128
  o handles chunked-encoded CONNECT responses
+ o misuse of ares_timeout() result
 
 This release includes the following known bugs:
 
